--- a/src/kml_clbs/templates/auth/login.html
+++ b/src/kml_clbs/templates/auth/login.html
@@ -1,15 +1,61 @@
-{% extends 'base.html' %}
-
-{% block header %}
-  <h1>{% block title %}登录{% endblock %}</h1>
-{% endblock %}
-
-{% block content %}
-  <form method="post">
+{% extends 'base.html' %} {% block header %} {% endblock %} {% block content %}
+<!-- <form method="post">
     <label for="username">用户名</label>
     <input name="username" id="username" required>
     <label for="password">密码</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
-  </form>
+    <input type="submit" value="登录">
+  </form> -->
+
+<div
+  class="modal modal-signin position-static d-block py-5"
+  tabindex="-1"
+  role="dialog"
+  id="modalSignin"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-4 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h1 class="fw-bold mb-0 fs-2">{% block title %}请登录{% endblock %}</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="modal-body p-5 pt-0">
+        <form method="post" class="">
+          <div class="form-floating mb-3">
+            <input
+              type="text"
+              class="form-control rounded-3"
+              id="username"
+              name="username"
+              placeholder="Username"
+            />
+            <label for="username">用户名</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input
+              type="password"
+              class="form-control rounded-3"
+              id="password"
+              name="password"
+              placeholder="Password"
+            />
+            <label for="password">密码</label>
+          </div>
+          <button
+            class="w-100 mb-2 btn btn-lg rounded-3 btn-primary"
+            type="submit"
+          >
+            登录
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
