--- a/src/kml_clbs/templates/base.html
+++ b/src/kml_clbs/templates/base.html
@@ -1,24 +1,50 @@
-<!doctype html>
-<title>{% block title %}{% endblock %} - KMLCLBS</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>KMLCLBS - 中心实验室生物信息服务</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">退出登录</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">注册</a>
-      <li><a href="{{ url_for('auth.login') }}">登录</a>
-    {% endif %}
-  </ul>
-</nav>
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
+<!DOCTYPE html>
+<html lang="zh-CN">
+  <title>{% block title %}{% endblock %} - KMLCLBS</title>
+  <link
+    rel="stylesheet"
+    href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+  />
+  <div class="container">
+    <header
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center col-md-9 mb-2 mb-md-0 text-dark text-decoration-none"
+      >
+        <h1 class="fs-1">KMLCLBS - 中心实验室生物信息服务</h1>
+      </a>
+
+      <!-- 导航栏 -->
+      <!-- <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2 link-secondary">主页</a></li>
+      </ul> -->
+      <div class="col-md-3 text-end">
+        {% if g.user %}
+        <font class="text-secondary me-2">{{ g.user['username'] }}</font>
+        <a class="btn btn-outline-primary" href="{{ url_for('auth.logout') }}"
+          >退出登录</a
+        >
+        {% else %}
+        <a
+          class="btn btn-outline-primary me-2"
+          href="{{ url_for('auth.login') }}"
+        >
+          登录
+        </a>
+        <a class="btn btn-primary" href="{{ url_for('auth.register') }}">
+          注册
+        </a>
+        {% endif %}
+      </div>
+    </header>
+
+    <section class="content">
+      <header>{% block header %}{% endblock %}</header>
+      {% for message in get_flashed_messages() %}
+      <div class="flash">{{ message }}</div>
+      {% endfor %}{% block content %}{% endblock %}
+    </section>
+  </div>
+</html>
