--- a/src/kml_clbs/templates/base.html
+++ b/src/kml_clbs/templates/base.html
@@ -5,6 +5,11 @@
     rel="stylesheet"
     href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
   />
+  <script
+    src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"
+    integrity="sha384-/mhDoLbDldZc3qpsJHpLogda//BVZbgYuw6kof4u2FrCedxOtgRZDTHgHUhOCVim"
+    crossorigin="anonymous"
+  ></script>
   <div class="container">
     <header
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom"
