--- a/src/kml_clbs/templates/index.html
+++ b/src/kml_clbs/templates/index.html
@@ -1,177 +1,61 @@
 {% extends 'base.html' %} {% block header %} {% endblock %} {% block content %}
-<div class="flex-shrink-0 p-3 bg-white" style="width: 280px">
+<div
+  class="d-flex flex-column flex-shrink-0 p-3 text-bg-light"
+  style="width: 280px; height: 80vh"
+>
   <a
     href="/"
-    class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom"
+    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"
   >
-    <svg class="bi pe-none me-2" width="30" height="24">
+    <svg class="bi pe-none me-2" width="40" height="32">
       <use xlink:href="#bootstrap"></use>
     </svg>
-    <span class="fs-5 fw-semibold">Collapsible</span>
+    <span class="fs-4">{% block title %}主页{% endblock %}</span>
   </a>
-  <ul class="list-unstyled ps-0">
-    <li class="mb-1">
-      <button
-        class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-        data-bs-toggle="collapse"
-        data-bs-target="#home-collapse"
-        aria-expanded="true"
-      >
-        Home
-      </button>
-      <div class="collapse show" id="home-collapse">
-        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Overview</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Updates</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Reports</a
-            >
-          </li>
-        </ul>
-      </div>
+  <hr />
+  <ul class="nav nav-pills flex-column mb-auto">
+    <li class="nav-item">
+      <a href="#" class="nav-link active" aria-current="page">
+        <svg class="bi pe-none me-2" width="16" height="16">
+          <use xlink:href="#home"></use>
+        </svg>
+        PCR室
+      </a>
     </li>
-    <li class="mb-1">
-      <button
-        class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-        data-bs-toggle="collapse"
-        data-bs-target="#dashboard-collapse"
-        aria-expanded="false"
-      >
-        Dashboard
-      </button>
-      <div class="collapse" id="dashboard-collapse">
-        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Overview</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Weekly</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Monthly</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Annually</a
-            >
-          </li>
-        </ul>
-      </div>
+    <li>
+      <a href="#" class="nav-link text-dark">
+        <svg class="bi pe-none me-2" width="16" height="16">
+          <use xlink:href="#speedometer2"></use>
+        </svg>
+        占位1
+      </a>
     </li>
-    <li class="mb-1">
-      <button
-        class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-        data-bs-toggle="collapse"
-        data-bs-target="#orders-collapse"
-        aria-expanded="false"
-      >
-        Orders
-      </button>
-      <div class="collapse" id="orders-collapse">
-        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >New</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Processed</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Shipped</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Returned</a
-            >
-          </li>
-        </ul>
-      </div>
+    <li>
+      <a href="#" class="nav-link text-dark">
+        <svg class="bi pe-none me-2" width="16" height="16">
+          <use xlink:href="#table"></use>
+        </svg>
+        占位2
+      </a>
     </li>
-    <li class="border-top my-3"></li>
-    <li class="mb-1">
-      <button
-        class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
-        data-bs-toggle="collapse"
-        data-bs-target="#account-collapse"
-        aria-expanded="false"
-      >
-        Account
-      </button>
-      <div class="collapse" id="account-collapse">
-        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >New...</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Profile</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Settings</a
-            >
-          </li>
-          <li>
-            <a
-              href="#"
-              class="link-dark d-inline-flex text-decoration-none rounded"
-              >Sign out</a
-            >
-          </li>
-        </ul>
-      </div>
+    <li>
+      <a href="#" class="nav-link text-dark">
+        <svg class="bi pe-none me-2" width="16" height="16">
+          <use xlink:href="#grid"></use>
+        </svg>
+        占位3
+      </a>
     </li>
   </ul>
+  <hr />
+  <div class="dropdown">
+    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+      <li><a class="dropdown-item" href="#">New project...</a></li>
+      <li><a class="dropdown-item" href="#">Settings</a></li>
+      <li><a class="dropdown-item" href="#">Profile</a></li>
+      <li><hr class="dropdown-divider" /></li>
+      <li><a class="dropdown-item" href="#">Sign out</a></li>
+    </ul>
+  </div>
 </div>
 {% endblock %}
