--- a/src/kml_clbs/templates/index.html
+++ b/src/kml_clbs/templates/index.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block header %} {% endblock %} {% block content %}
+{% extends 'base.html' %} {% block title %}主页{% endblock %} {% block header %}
+{% endblock %} {% block content %}
 <div
   class="d-flex flex-column flex-shrink-0 p-3 text-bg-light"
   style="width: 280px; height: 80vh"
@@ -10,7 +11,7 @@
     <svg class="bi pe-none me-2" width="40" height="32">
       <use xlink:href="#bootstrap"></use>
     </svg>
-    <span class="fs-4">{% block title %}主页{% endblock %}</span>
+    <span class="fs-4">导航</span>
   </a>
   <hr />
   <ul class="nav nav-pills flex-column mb-auto">
