--- a/src/kml_clbs/templates/auth/register.html
+++ b/src/kml_clbs/templates/auth/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block header %} {% endblock %} {% block content %}
+{% extends 'base.html' %} {% block header %} {% endblock %} {% block content_base %}
 <div
   class="modal modal-signin position-static d-block py-5"
   tabindex="-1"
