--- a/src/kml_clbs/templates/index.html
+++ b/src/kml_clbs/templates/index.html
@@ -18,7 +18,7 @@ header%}{% endblock %} {% block content_base %}
     <hr />
     <ul class="nav nav-pills flex-column mb-auto">
       <li class="nav-item">
-        <a href="{{ url_for('molecular.nav') }}" class="nav-link active" aria-current="page">
+        <a href="{{ url_for('.nav') }}" class="nav-link active" aria-current="page">
           <svg class="bi pe-none me-2" width="16" height="16">
             <use xlink:href="#home"></use>
           </svg>
