--- a/src/kml_clbs/templates/ngs/nav.html
+++ b/src/kml_clbs/templates/ngs/nav.html
@@ -2,7 +2,7 @@
 <div>
   <ul class="nav nav-pills mb-auto">
     <li>
-      <a href="{{ url_for('molecular.bcl2fastq') }}" class="nav-link ps-1">
+      <a href="{{ url_for('ngs.bcl2fastq') }}" class="nav-link ps-1">
         <span class="me-2 text-muted" aria-hidden="true">•</span>
         Illumina 下机数据拆分
       </a>
