--- a/src/kml_clbs/templates/pcr/kras.html
+++ b/src/kml_clbs/templates/pcr/kras.html
@@ -1,13 +1,17 @@
 {% extends 'index.html' %} {% block title %}{{title}}{% endblock %} {% block
 header%}{% endblock %} {% block content %}
+
 <!-- * 面包屑导航 -->
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{{url_for('home.index')}}">主页</a></li>
+    <li class="breadcrumb-item">
+      <a href="{{url_for('home.index')}}">主页</a>
+    </li>
     <li class="breadcrumb-item"><a href="{{url_for('pcr.index')}}">PCR</a></li>
     <li class="breadcrumb-item active" aria-current="page">KRAS</li>
   </ol>
 </nav>
+
 <!-- 表单 -->
 <form method="POST">
   <div class="mb-3">
@@ -26,4 +30,16 @@ header%}{% endblock %} {% block content %}
   </div>
   <button type="submit" class="btn btn-primary">提交</button>
 </form>
-{% endblock %}
+
+<!-- 如果有结果返回 -->
+{% if result %}
+
+<hr />
+
+<!-- 结果显示区域 -->
+<div id="resultArea" class="mt-3">
+  <p>请点击链接下载</p>
+  <a href="{{result}}" target="_blank" class="btn btn-success">下载结果</a>
+</div>
+
+{% endif %} {% endblock %}
